--- a/Week4-Spatial/spatial_assignment.Rmd
+++ b/Week4-Spatial/spatial_assignment.Rmd
@@ -3,8 +3,8 @@ title: 'Assignment: Spatial Diversity'
 author: 'Michelle Benavidez; Z620: Quantitative Biodiversity, Indiana University'
 date: '`r format(Sys.time(), "%d %B, %Y")`'
 output:
-  html_document: default
   pdf_document: default
+  html_document: default
   word_document: default
 geometry: margin=2.54cm
 ---
@@ -42,7 +42,7 @@ In the R code chunk below, provide the code to:
 ```{r, results = 'hide'}
 rm(list=ls())
 getwd()
-setwd("C:/users/Michelle/GitHub/QB2017_Benavidez/Week4-Spatial")
+setwd("~/GitHub/QB2017_Benavidez/Week4-Spatial")
 ```
 
 ## 2) LOADING R PACKAGES
